Added: PZ-Icon Theme !

--- a/package.json
+++ b/package.json
@@ -21,6 +21,13 @@
         "title": "PZ Mode: Hello World"
       }
     ],
+    "iconThemes": [
+      {
+    "id": "pz-icons",
+    "label": "PZ Icons",
+    "path": "./pz-icons.json"
+      }
+    ],
     "languages": [
       {
         "id": "pz",
