--- a/package.json
+++ b/package.json
@@ -42,6 +42,12 @@
         "scopeName": "source.pz",
         "path": "./syntaxes/pz.tmLanguage.json"
       }
+    ],
+    "snippets": [
+      {
+    "language": "pz",
+    "path": "./snippets/pz.json"
+      }
     ]
   },
   "scripts": {
@@ -49,6 +55,7 @@
     "pretest": "npm run lint",
     "test": "node ./test/runTest.js"
   },
+  
   "devDependencies": {
     "@types/vscode": "^1.102.0",
     "@types/mocha": "^10.0.10",
