--- a/package.json
+++ b/package.json
@@ -28,21 +28,53 @@
     "path": "./pz-icons.json"
       }
     ],
+    
     "languages": [
       {
-        "id": "pz",
-        "aliases": ["PZ", "Project Zomboid"],
-        "extensions": [".pz", ".txt"],
-        "configuration": "./language-configuration.json"
+      "id": "pz",
+      "extensions": [".pz"],
+      "aliases": ["Project Zomboid Script"],
+      "configuration": "./language-configuration.json"
+      },
+      {
+      "id": "lua",
+      "extensions": [".lua"],
+      "aliases": ["Lua"]
+     },
+     {
+      "id": "ini",
+      "extensions": [".ini"],
+      "aliases": ["INI"]
+     },
+      {
+      "id": "json",
+      "extensions": [".json"],
+      "aliases": ["JSON"]
       }
     ],
     "grammars": [
-      {
-        "language": "pz",
-        "scopeName": "source.pz",
-        "path": "./syntaxes/pz.tmLanguage.json"
-      }
-    ],
+    {
+      "language": "pz",
+      "scopeName": "source.pz",
+      "path": "./syntaxes/pz.tmLanguage.json"
+    },
+    {
+      "language": "lua",
+      "scopeName": "source.lua",
+      "path": "./syntaxes/lua.tmLanguage.json"
+    },
+    {
+      "language": "ini",
+      "scopeName": "source.ini",
+      "path": "./syntaxes/ini.tmLanguage.json"
+    },
+    {
+      "language": "json",
+      "scopeName": "source.json",
+      "path": "./syntaxes/json.tmLanguage.json"
+    }
+  ],
+
     "snippets": [
       {
     "language": "pz",
