--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pzmode",
   "displayName": "PZ Mode",
   "description": "A Visual Studio Code extension for Project Zomboid modding.",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "publisher": "hexzhen3x7",
   "engines": {
     "vscode": "^1.102.0"
@@ -19,66 +19,92 @@
       {
         "command": "pzmode.helloWorld",
         "title": "PZ Mode: Hello World"
+      },
+      {
+        "command": "pzmode.createModStructure",
+        "title": "PZ Mode: Mod-Grundstruktur erstellen"
+      },
+      {
+        "command": "pzmode.createSampleFile",
+        "title": "PZ Mode: Beispiel-Datei erstellen"
       }
     ],
     "iconThemes": [
       {
-    "id": "pz-icons",
-    "label": "PZ Icons",
-    "path": "./pz-icons.json"
+        "id": "pz-icons",
+        "label": "PZ Icons",
+        "path": "./pz-icons.json"
       }
     ],
-    
     "languages": [
       {
-      "id": "pz",
-      "extensions": [".pz"],
-      "aliases": ["Project Zomboid Script"],
-      "configuration": "./language-configuration.json"
+        "id": "pz",
+        "extensions": [
+          ".pz"
+        ],
+        "aliases": [
+          "Project Zomboid Script"
+        ],
+        "configuration": "./language-configuration.json"
       },
       {
-      "id": "lua",
-      "extensions": [".lua"],
-      "aliases": ["Lua"]
-     },
-     {
-      "id": "ini",
-      "extensions": [".ini"],
-      "aliases": ["INI"]
-     },
+        "id": "lua",
+        "extensions": [
+          ".lua"
+        ],
+        "aliases": [
+          "Lua"
+        ]
+      },
       {
-      "id": "json",
-      "extensions": [".json"],
-      "aliases": ["JSON"]
+        "id": "ini",
+        "extensions": [
+          ".ini"
+        ],
+        "aliases": [
+          "INI"
+        ]
+      },
+      {
+        "id": "json",
+        "extensions": [
+          ".json"
+        ],
+        "aliases": [
+          "JSON"
+        ]
       }
     ],
     "grammars": [
-    {
-      "language": "pz",
-      "scopeName": "source.pz",
-      "path": "./syntaxes/pz.tmLanguage.json"
-    },
-    {
-      "language": "lua",
-      "scopeName": "source.lua",
-      "path": "./syntaxes/lua.tmLanguage.json"
-    },
-    {
-      "language": "ini",
-      "scopeName": "source.ini",
-      "path": "./syntaxes/ini.tmLanguage.json"
-    },
-    {
-      "language": "json",
-      "scopeName": "source.json",
-      "path": "./syntaxes/json.tmLanguage.json"
-    }
-  ],
-
+      {
+        "language": "pz",
+        "scopeName": "source.pz",
+        "path": "./syntaxes/pz.tmLanguage.json"
+      },
+      {
+        "language": "lua",
+        "scopeName": "source.lua",
+        "path": "./syntaxes/lua.tmLanguage.json"
+      },
+      {
+        "language": "ini",
+        "scopeName": "source.ini",
+        "path": "./syntaxes/ini.tmLanguage.json"
+      },
+      {
+        "language": "json",
+        "scopeName": "source.json",
+        "path": "./syntaxes/json.tmLanguage.json"
+      }
+    ],
     "snippets": [
       {
-    "language": "pz",
-    "path": "./snippets/pz.json"
+        "language": "pz",
+        "path": "./snippets/pz.json"
+      },
+      {
+        "language": "lua",
+        "path": "./snippets/lua.code-snippets"
       }
     ]
   },
@@ -87,7 +113,6 @@
     "pretest": "npm run lint",
     "test": "node ./test/runTest.js"
   },
-  
   "devDependencies": {
     "@types/vscode": "^1.102.0",
     "@types/mocha": "^10.0.10",
