--- a/package.json
+++ b/package.json
@@ -127,7 +127,11 @@
   "scripts": {
     "lint": "eslint .",
     "pretest": "npm run lint",
-    "test": "node ./test/runTest.js"
+    "test": "node ./test/runTest.js",
+    "build": "webpack --mode production",
+    "package": "vsce package",
+    "publish": "vsce publish",
+    "prepublish": "npm run lint"
   },
   "devDependencies": {
     "@types/vscode": "^1.102.0",
